* **Increase scheduler parallelism:** Alternatively, you can try increasing the parallelism of the virtual thread scheduler using this Java option: `-Djdk.virtualThreadScheduler.parallelism=4`

We recommend monitoring your application's performance after the upgrade, especially if you are running on a system with a low CPU count.

=== Removed legacy Hot Rod client

The legacy Hot Rod client (`org.infinispan:infinispan-hotrod-client-legacy`) has been removed. If, for some reason,
you still need to use it, please use one from previous versions which are still maintained.

=== Deprecation removals

Everything that was deprecated in 10.x, 11.0 has been removed.

== Upgrading from 15.1 to 15.2

=== Native Server
The native server and its associated `quay.io/infinispan/server-native` images are no longer provided. User should
use the JVM based server instead as it provides significant performance issues over its native counterpart, without 
compromising on features, and is fully supported.

=== Default Index startup mode is now AUTO

The default used to be `NONE`, meaning that no actions at cache startup time are taken in case
potential index data inconsistencies are detected from the cache configuration.
With `AUTO`, for instance, a purge is automatically triggered if the cache is not persistent while the indexes are.
For complete detail see link:{query_docs}#indexing-configuration_startup-mode[Index startup mode].

=== Server Endpoints
All server endpoints (HotRod, RESP, Memcached & REST) now support a default `max-content-length` of 10 MB for each
request by default. That means if a request is larger than this size it will be rejected by the server. If you
need to increase this limit please set the value explicitly in the server configuration.

== Upgrading from 15.0 to 15.1

=== Java HotRod Client Changes

==== New client connection handler

A new client has been introduced that only keeps a single connection per server it is connected to and supports